# FreeRTOS-Zephyr-Labs

./: .gitignore  CMakeLists.txt  README.md  build.sh  flash.sh  lab1-log.txt
cmake/: gcc-arm-none-eabi.cmake
common/drivers/: adxl345.c  adxl345.h  spi.c  spi.h
common/inc/: FreeRTOSConfig.h  deprecated_definitions.h  irq.h  list.h  mpu_wrappers.h  platform.h  portable.h  portmacro.h  projdefs.h  semphr.h  stack_macros.h
common/src/: platform.c
freertos/: list.c  queue.c  syscalls.c  tasks.c  timers.c
inc/: FreeRTOS.h  FreeRTOSConfig.h  platform.h  queue.h  task.h  timers.h
lab1/logs/: lab1_preemptive_time_slicing_uart_log.txt
lab1/src/: main.c  platform.c
lab2/logs/: lab2_cooperative_uart_log.txt  lab2_preemptive_uart_log.txt
lab2/src/: irq.c  main.c  platform.c
lab3/logs/: queue.txt
lab3/src/: main.c
labs/: labs.txt
labs/binary_semaphores/src/: main.c
labs/lab1/: writeup.md
labs/lab1/logs/: lab1_cooperative_time_slicing_uart_log.txt
labs/lab1/src/: main.c
labs/lab2/: README.md
labs/lab2/logs/: lab2_preemptive_uart_log.txt
labs/lab3/src/: main.c  platform.c
labs/lab4/logs/: binary_sempahore.txt
labs/lab4/src/: main.c
labs/lab5/logs/: with_mutex.txt  without_mutex.txt
labs/lab5/src/: main.c
labs/lab6/logs/: binary_semaphore.txt
labs/lab7/src/: main.c
labs/lab8/src/: main.c
labs/lab9/logs/: uart_and_timer.txt
labs/lab9/src/: main.c
labs/low_level_driver_rtos/src/: main.c
labs/periodic_tasks/src/: main.c
labs/queues/logs/: queue_full.txt
labs/software_timers/logs/: oneshot_and_periodic.txt
labs/task_notifications/src/: main.c
labs/uart_cli/src/: main.c
src/: main.c
